@@ -247,6 +247,14 @@ MAX_UNSHARED_SIZE       = 0
 
 FULL_SEARCH              = No
 
+# Blob searching. By default, searches of document fields is limited to only
+# short values (usually corresponding to headers and the like). If you'd like
+# to also search long fields (such as paragraphs), enable this directive. But
+# note that the more documents with long fields you have, the slower such
+# searches will become.
+
+BLOB_SEARCH              = No
+
 # Workflow desk transfers. By default, a desk that is shared between workflows
 # appears in both workflows, but any asset on that desk can only be transfered
 # to other desks in the workflow from which the asset originated. To allow
