@@ -241,7 +241,7 @@ use constant PARAM_WHERE_MAP => {
       subelement_id         => 'i.id = sme.object_instance_id AND sme.element_type__id = ?',
       related_story_id      => 'i.id = mctrs.object_instance_id AND mctrs.related_story__id = ?',
       related_media_id      => 'i.id = mctrm.object_instance_id AND mctrm.related_media__id = ?',
-      data_text             => 'LOWER(md.short_val) LIKE LOWER(?) AND md.object_instance_id = i.id',
+      data_text             => '(LOWER(md.short_val) LIKE LOWER(?) OR LOWER(md.blob_val) LIKE LOWER(?)) AND md.object_instance_id = i.id',
       title                 => 'LOWER(i.name) LIKE LOWER(?)',
       description           => 'LOWER(i.description) LIKE LOWER(?)',
       version               => 'i.version = ?',
@@ -309,7 +309,7 @@ use constant PARAM_ANYWHERE_MAP => {
     related_media_id       => [ 'i.id = mctrm.object_instance_id',
                                 'mctrm.related_media__id = ?' ],
     data_text              => [ 'md.object_instance_id = i.id',
-                                'LOWER(md.short_val) LIKE LOWER(?)' ],
+                                '(LOWER(md.short_val) LIKE LOWER(?) OR LOWER(md.short_val) LIKE LOWER(?))' ],
     output_channel_id      => [ 'i.id = moc.media_instance__id',
                                 'moc.output_channel__id = ?' ],
     category_uri           => [ 'i.category__id = c.id',
