@@ -348,7 +348,7 @@ use constant PARAM_WHERE_MAP => {
       subelement_id          => 'i.id = sse.object_instance_id AND sse.element_type__id = ?',
       related_story_id       => 'i.id = sctrs.object_instance_id AND sctrs.related_story__id = ?',
       related_media_id       => 'i.id = sctrm.object_instance_id AND sctrm.related_media__id = ?',
-      data_text              => 'LOWER(sd.short_val) LIKE LOWER(?) AND sd.object_instance_id = i.id',
+      data_text              => 'sd.object_instance_id = i.id AND (LOWER(sd.short_val) LIKE LOWER(?)' . ( BLOB_SEARCH ? ' OR LOWER(sd.blob_val) LIKE LOWER(?))' : ')' ),
       title                  => 'LOWER(i.name) LIKE LOWER(?)',
       description            => 'LOWER(i.description) LIKE LOWER(?)',
       version                => 'i.version = ?',
@@ -433,7 +433,7 @@ use constant PARAM_ANYWHERE_MAP => {
     related_media_id       => [ 'i.id = sctrm.object_instance_id',
                                 'sctrm.related_media__id = ?' ],
     data_text              => [ 'sd.object_instance_id = i.id',
-                                'LOWER(sd.short_val) LIKE LOWER(?)' ],
+                                '(LOWER(sd.short_val) LIKE LOWER(?)' . (BLOB_SEARCH ? ' OR LOWER(sd.blob_val) LIKE LOWER(?)' : ')') ],
     output_channel_id      => [ 'i.id = soc.story_instance__id',
                                 'soc.output_channel__id = ?' ],
     category_id            => [ 'i.id = sc2.story_instance__id',
