@@ -136,6 +136,12 @@ Updated the Portuguese localizations. [Pedro Custodio]
 Added the C<related_story_id> and C<related_media_id> parameters to
 C<< Bric::Biz::Element::Container->list()>. [David]
 
+=item *
+
+Added the new C<BLOB_SEARCH> F<bricolage.conf> directive, which enables data
+text searches to search paragraph-type fields as well as shorter header-type
+fields. [David]
+
 =back
 
 =head2 Bug Fixes
